<resources>
    <string name="app_name">Shelter Swipper</string>
    <string name="title_activity_shelter_login">Login</string>

    <!-- Layout Screen Strings -->
    <string name="all">All</string>
    <string name="save">Save</string>
    <string name="advance_search">Advance Search</string>
    <string name="animal_preference">Animal Preferences</string>
    <string name="animal_info">Animal Info</string>
    <string name="browse">Browse</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
    <string name="next_animal">Next Animal</string>
    <string name="animal_image_desc">Animal Image</string>
    <string name="logo_desc">Logo</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="shelter_info">Shelter Info</string>
    <string name="animal_name">Animal Name</string>
    <string name="animal_description">Animal Description</string>
    <string name="directions">Directions</string>

    <!-- Login Screen Strings -->
    <string name="blank_username">Please enter a username</string>
    <string name="blank_password">Please enter a password</string>
    <string name="diff_passwords">Passwords do not match</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="area_range">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string-array name="petType">
        <item>Dog</item>
        <item>Cat</item>
        <item>Other</item>
    </string-array>

    <!-- Nicolas's Private String Collection -->
    <string name="button_login">Login</string>
    <string name="button_register">Register Here</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmation">Confirm Password</string>

    <string name="question">Are you a shelter owner?</string>

    <string name="shelter_name">Name of Shelter</string>
    <string name="shelter_location">Location of Shelter</string>
    <string name="shelter_description">Description of Shelter</string>

    <string name="button_accept">Accept</string>
    <string name="button_next">Next</string>

    <string name="username_example">Prince of Cats (16 Characters max.)</string>
    <string name="password_example">****************</string>

    <string name="shelter_name_example">Woofledore (32 Characters max.)</string>
    <string name="shelter_location_example">12345 Adoption Lane Columbus, OH 43201</string>
    <string name="shelter_description_example">We have the best pets</string>

    <string name="button_register_pet">Register Pet</string>
    <string name="logout">Logout</string>

    <string name="pet_name">Name of Pet</string>
    <string name="pet_location">Location of Pet</string>
    <string name="pet_description">Description of Pet</string>

    <string name="pet_name_example">Mr. Pussy</string>
    <string name="pet_location_example">12345 Adoption Lane Columbus, OH 43201</string>
    <string name="pet_description_example">Female, Spanish-american twin tail, 2 years old. Likes blue yarn and bells.</string>

    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
</resources>
