<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:text="@string/pet_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:hint="@string/pet_name_example"
            android:textColorHint="@android:color/secondary_text_dark"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:text="@string/pet_location"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPetLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:inputType="textPostalAddress"
            android:hint="@string/pet_location_example"
            android:textColorHint="@android:color/secondary_text_dark"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:text="@string/pet_description"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etPetDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/widget_edittext_dark"
            android:hint="@string/pet_description_example"
            android:textColorHint="@android:color/secondary_text_dark"
            android:background="@android:color/transparent"/>

        <Spinner
            android:id="@+id/sPetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/petType"/>

        <ImageView
            android:id="@+id/ivPetImage"
            android:layout_gravity="center_horizontal"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/bSelectImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/select_image"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_light"
            android:visibility="gone"/>

        <Button
            android:id="@+id/bUploadImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/upload_image"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_light"
            android:visibility="gone"/>

        <Button
            android:id="@+id/bPetRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/button_accept"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_light"
            android:visibility="visible"/>

    </LinearLayout>

</ScrollView>
