<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sheltinder_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:textAppearance="@android:style/TextAppearance.Material.Display2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:text="@string/animal_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/animalpref"
        android:textAppearance="@android:style/TextAppearance.Material.Display1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="162dp">

        <Switch
            android:text="@string/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/all"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:checked="false"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:text="@string/dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dog"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <Switch
            android:text="@string/cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cat"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <Switch
            android:text="@string/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/other"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />


    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:padding="10dp"
        android:layout_marginBottom="8dp"
        android:textColor="#ffffff"
        android:background="@drawable/mybutton"
        android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
