<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="15dp">

    <TextView
        android:text="@string/animal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/animalinfo"
        android:textAppearance="@android:style/TextAppearance.Material.Display3" />

    <Space android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:text="@string/info"
        android:layout_width="match_parent"
        android:id="@+id/ainfo"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_weight="0.20"
        android:layout_height="50dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:text="@string/shelter_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shelterinfo"
        android:textAppearance="@android:style/TextAppearance.Material.Display3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:text="@string/info"
        android:layout_width="match_parent"
        android:id="@+id/sinfo"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_weight="0.20"
        android:layout_height="50dp" />

    <Button
        android:text="@string/directions"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/bMaps"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</LinearLayout>
