<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sheltinder_background"
    android:orientation="vertical"
    android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/sheltinder_logo"
                android:id="@+id/imageView"
                android:contentDescription="@string/logo_desc"/>

            <Button
                android:text="@string/button_register_pet"
                android:layout_width="match_parent"
                android:id="@+id/bPetRegister"
                android:layout_weight="0.24"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:background="@drawable/mybutton"
                android:textSize="20sp"/>

            <Button
                android:text="@string/browse"
                android:layout_width="match_parent"
                android:id="@+id/browse"
                android:layout_weight="0.24"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:background="@drawable/mybutton"
                android:textSize="20sp"/>

            <Button
                android:text="@string/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
                android:layout_weight="0.24"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:background="@drawable/mybutton"
                android:textSize="20sp"/>

            <Button
                android:text="@string/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logout"
                android:layout_weight="0.24"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:background="@drawable/mybutton"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
