<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/shelter_name"
                android:ems="10"
                android:id="@+id/shelterName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/shelterLocation"
                android:text="@string/shelter_location" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/shelterDescription"
                android:text="@string/shelter_description"
                android:textAlignment="viewStart" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:text="@string/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextButton" />

        </LinearLayout>
</ScrollView>
